# docent

./: .gitignore  .npmrc  LICENSE  README.md  cleanup.py  eslint.config.js  fix_gatekeeper.py  fix_spotlight.py  index.html  package-lock.json  package.json  patch_applied_memory.py  patch_callers.py  patch_dreamer.py  patch_gatekeeper.py  patch_lib.py  patch_lib2.py  patch_lib3.py  patch_lib_safe.py  patch_memory_context.py  remove_toggles.py  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: check-build-errors.sh
.github/workflows/: ci.yml  release.yml
docs/: HANDOFF-nav-agent-redesign.md  agent-capabilities-design.md  agent-file-access-design.md  agent-model-rationale.md  agent-model-rollout.md  agent-suggestion.md  agentforge-code-architecture.md  agentforge-code-design.md  alexis-sidecar-spec.md  applied-memory.md  canvas-code-ia-design.md  feedback-backlog.md  forge-inbox-shortcut.md  image-library-design.md  knowledge-graph-curation-design.md  learning-loop.md  main-window-redesign-prompt.md  mobile-companion-architecture.md  model-recommendations-plan.md  onboarding-feedback.md  organic-skills.md  people-directory-design.md  redesign-phase2-plan.md  releasing.md  roadmap-handoff.md  session-handoff.md  settings-ia-audit.md  vision-understanding-design.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: credentialStore.ts  relayClient.ts  theme.ts
mobile/src/screens/: ChatScreen.tsx  ChatsScreen.tsx  PairScreen.tsx
scripts/: forge-relay.mjs  install-forge-relay-launchd.sh  memory-gatekeeper-eval.ts  release.mjs  test-forge-relay-ws.mjs  test-forge-relay.mjs  test-memory-gatekeeper.mjs  test-memory-policy.mjs  test-model-recommendations.mjs  use-local-node.sh
src/: App.tsx  BrowserSidebar.tsx  BrowserWindowApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.dev.plist  Info.plist  build.rs  deny.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: browser-remote.json  browser-window.json  default.json  spotlight.json
src-tauri/certs/: agentforge-codesign.crt
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml  app_local.gen.toml
src-tauri/src/: calendar.rs  imessage.rs  input.rs  jobs.rs  lib.rs  mail.rs  main.rs  music.rs  notes.rs  oauth.rs  permissions.rs  pty.rs  screenshot.rs  test_list_windows.rs
src/components/: ActivityCenter.tsx  ActivityMonitor.tsx  AgentForgeCodePanel.tsx  AgentVisionToggle.tsx  AppSidebar.tsx  ArtifactStartModal.tsx  AssistantSettingsModal.tsx  BrowserContextMenu.tsx  BrowserPanel.tsx  BrowserPasswordBar.tsx  BrowserStartPage.tsx  BrowserTabContent.tsx  CalendarPanel.tsx  CanvasPanel.tsx  ChatHeader.tsx  ChatInputBar.tsx  ChatPanel.tsx  CmdKPalette.tsx  CommandActionCard.tsx  CommandNode.tsx  DayPanel.tsx  DesktopViewerPanel.tsx  DockedAgentRail.tsx  DreamConsentModal.tsx  DreamDigestModal.tsx  DynamicBackground.tsx  EntityDossierPage.tsx  EventCards.tsx  FeedbackModal.tsx  FileActionCard.tsx  FirstDreamPrompt.tsx  FullDiskAccessGrant.tsx  GalleryPanel.tsx  GlowOverlay.tsx  InboxPanel.tsx  IntegrationsDashboard.tsx  IntegrationsModal.tsx  KnowledgeDropZone.tsx  KnowledgeGraphPanel.tsx  KnowledgeLibraryView.tsx  (+36 more)
src/components/managers/: PermissionsBootstrapper.tsx  SpotlightListener.tsx  SystemMonitor.tsx
src/components/ui/: ActionBubble.tsx  ActivityTrail.tsx  AgentIcon.tsx  Badge.tsx  Button.tsx  ChannelModal.tsx  CollapsibleBubble.tsx  ConnectorAccessGate.tsx  ContextMeter.tsx  DocentMark.tsx  EmojiIcon.tsx  FormattedText.tsx  Input.tsx  InteractiveGlassCard.tsx  ThoughtProcess.tsx  TypingIndicator.tsx  VoicePicker.tsx  WanderingFriends.tsx  WysiwygEditor.tsx
src/data/: agentForgeUserDocs.ts  appRegistry.ts  modelCatalog.ts  skills.ts  usHolidays.ts
src/lib/: cn.ts  dates.ts  id.ts  ipc.ts  log.ts  mailUnread.ts  panelCache.ts  textDiff.ts  theme.ts  useGroundedSuggestions.ts  useVoices.ts  voice.ts
src/services/: agentActions.ts  appliedMemory.ts  browserAgent.ts  browserAnnotator.ts  browserVision.ts  channels.ts  contextEvaluator.ts  contextHealth.ts  conversationGraph.ts  database.ts  deepResearch.ts  desktopVision.ts  dreamer.ts  entityEnrichment.ts  graphContext.ts  graphEntityExtractor.ts  graphMigrations.ts  grounding.ts  inbox.ts  integrations.ts  knowledgeLibrary.ts  librarianCharter.ts  llm.ts  mailTriage.ts  memoryContext.ts  memoryGatekeeper.ts  memoryLedger.ts  memoryPolicy.ts  mobileAgentFilter.ts  modelBlocks.ts  modelRecommendations.ts  omniIntent.ts  organicSkills.ts  pageCapture.ts  pageDigest.ts  pdfParser.ts  pinPersonalization.ts  proactiveCommentary.ts  receipts.ts  relayBridge.ts  (+17 more)
src/services/capabilities/: index.ts  registry.ts  types.ts
src/services/connectors/: index.ts  mappers.ts  migrate.ts  types.ts
src/services/context/: ambient.ts
src/services/fileAccess/: consent.ts  provenance.ts  spaces.ts  types.ts
src/store/: useAgentActivityStore.ts  useAgentStore.ts  useBrowserStore.ts  useChatStore.ts  useJobStore.ts  useMarginaliaStore.ts  useMemoryStore.ts  useMessagesStore.ts  useSettingsStore.ts  useSpaceStore.ts  useTaskStore.ts  useToolContextStore.ts  useUIStore.ts  useWeatherStore.ts
src/tests/: setup.ts
src/tests/components/: AgentVisionToggle.test.tsx  CalendarPanel.test.tsx  ChatPanel.test.tsx  CmdKPalette.test.tsx  CommandNode.test.tsx  DreamConsentModal.test.tsx  DreamDigestModal.test.tsx  EventCards.test.tsx  FirstDreamPrompt.test.tsx  MarginaliaLayer.test.tsx  OmniTabBar.test.tsx  SourcesTray.test.tsx  SpaceHomeLanding.test.tsx  SpaceLogTabContent.test.tsx  StartPage.test.tsx  TabOverflow.test.ts  TabOverflowMenu.test.tsx  WeatherEffectBadge.test.tsx  browserStartPage.test.ts
src/tests/data/: modelCatalog.test.ts
src/tests/helpers/: tauri.ts
src/tests/lib/: panelCache.test.ts  textDiff.test.ts
src/tests/services/: agentActions.test.ts  appRegistry.test.ts  appliedMemory.test.ts  browserControlFrame.test.ts  capabilities.test.ts  channels.test.ts  connectors.eventkit.test.ts  (+42 more)
src/types/: omniTab.ts
src/utils/: llamaManager.js  nativeFetch.js
(+17 files in other folders)
