[package]
name = "agent-forge"
version = "2.5.8"
description = "A local-first personal AI command center for custom agents, browser context, and persistent memory."
authors = ["git-layton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
# In-app auto-update: pulls signed releases from GitHub, verifies the minisign signature
# (pubkey in tauri.conf.json), and swaps the bundle in place. `process` provides relaunch().
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sysinfo = "0.30"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
fastembed = "4"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
scraper = "0.20"
# Interactive terminal (PTY) backend for AgentForge Code — wezterm's cross-platform pty interface.
portable-pty = "0.9"
# Base64 of raw PTY bytes streamed over the pty:data event (never lossy-decode multibyte UTF-8 per read).
base64 = "0.22"
# Local-first mail layer (IMAP read; SMTP/parse added next). Uses native-tls = macOS Security.framework,
# already in the tree, so no new TLS stack.
imap = "2"
native-tls = "0.2"
mail-parser = "0.9"
lettre = "0.11"
uuid = { version = "1.23.5", features = ["v4"] }

# Native macOS Calendar/Reminders via EventKit (objc2 bindings). Calendar events + reminders sync to
# the user's other devices over iCloud. Feature-gated per Obj-C class/method used in calendar.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSDate", "NSCalendar", "NSArray", "NSError", "NSObject", "NSEnumerator", "NSData", "NSDictionary"] }
objc2-event-kit = { version = "0.3", features = ["EKEventStore", "EKEvent", "EKReminder", "EKCalendar", "EKCalendarItem", "EKObject", "EKTypes", "EKRecurrenceRule", "EKRecurrenceEnd", "EKSource", "block2"] }
# Codey's "LOOK" eyes — capture the live Preview iframe (WKWebView.takeSnapshot) so a vision model can
# SEE the running app. See screenshot.rs. CGGeometry → CGRect crop; AppKit → NSImage/PNG encode.
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "block2"] }
# On-device OCR (Apple Vision framework) — read screen text locally, no cloud/API key. See screenshot.rs.
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNTypes"] }
core-graphics = "0.23"
core-foundation = "0.9"
